fixed typo in Parameter name

--- a/APTRS/templates/vulnerabilities.html
+++ b/APTRS/templates/vulnerabilities.html
@@ -78,7 +78,7 @@
 
                                         <tr>
                                         <td>{{instance.URL}}</td>
-                                        <td>{{instance.Paramter}} </td>
+                                        <td>{{instance.Parameter}} </td>
                                         <td class="{{ instance.status |cut:' ' }}">{{instance.status}} </td>
                                         </tr>
                                         {% endif %}
